<resources>
    <string name="app_name">nav_comp_bundle_aston</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_b">Перейти на Fragment B</string>
    <string name="go_to_fragmentC">Перейти на Fragment C</string>
    <string name="go_to_fragmentD">Перейти на Fragment D</string>
    <string name="go_to_fragmentA">Перейти на Fragment A</string>
    <string name="back">Назад</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="fragment_c">Fragment C</string>
    <string name="fragment_d">Fragment D</string>
</resources>