<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentC"
    tools:context=".FragmentC">

    <TextView
        android:id="@+id/nameFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_c"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/helloFragmentC_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_to_fragmentD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/go_to_fragmentD"
        app:layout_constraintEnd_toEndOf="@+id/helloFragmentC_tv"
        app:layout_constraintStart_toStartOf="@+id/helloFragmentC_tv"
        app:layout_constraintTop_toBottomOf="@+id/helloFragmentC_tv" />

    <Button
        android:id="@+id/go_to_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="@+id/go_to_fragmentD"
        app:layout_constraintStart_toStartOf="@+id/go_to_fragmentD"
        app:layout_constraintTop_toBottomOf="@+id/go_to_fragmentD" />

</androidx.constraintlayout.widget.ConstraintLayout>